# DukunCrypto

./: .env.example  .gitignore  .replit  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_FPS_MS.md  Dockerfile  LICENSE  README-DOCKER.md  README.md  btc_analyzer.py  combined_analyzer.py  docker-compose.yml  fix_yfinance_termux.sh  main.py  pyproject.toml  replit.md  requirements.txt  setup.py  setup.sh  setup_termux.sh  supervisord.conf  test.py  xau_analyzer.py
docs/: API.md  TECHNICAL_INDICATORS.md
scripts/: mt5_launcher.sh
src/: __init__.py  mt5_trader.py
