[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "mplfinance>=0.12.10b0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "python-telegram-bot>=22.5",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "yfinance>=0.2.66",
]
