[project]
name = "ai-trading-analysis-bots"
version = "1.0.0"
description = "AI-powered Telegram bots for cryptocurrency and forex technical analysis using Google Gemini Vision"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AI Trading Bots Contributors"}
]
keywords = [
    "telegram-bot",
    "trading",
    "technical-analysis",
    "cryptocurrency",
    "forex",
    "bitcoin",
    "gemini-ai",
    "candlestick-charts",
    "rsi",
    "macd",
    "bollinger-bands",
    "fibonacci"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mplfinance>=0.12.10b0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "python-telegram-bot>=21.0",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "websocket-client>=1.7.0",
    "xnoxs-fetcher>=4.0.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-trading-analysis-bots"
Documentation = "https://github.com/yourusername/ai-trading-analysis-bots#readme"
Repository = "https://github.com/yourusername/ai-trading-analysis-bots"
Issues = "https://github.com/yourusername/ai-trading-analysis-bots/issues"
Changelog = "https://github.com/yourusername/ai-trading-analysis-bots/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
